--- a/CSS/adminLoginStyle.css
+++ b/CSS/adminLoginStyle.css
@@ -3,30 +3,7 @@ body {
     width: 100%;
 }
 
-.topImage {
-    height: 320px;
-    width: 1300px;
-    margin-top: 30px;
-    border-radius: 20px;
-    opacity: 0.9;
-    box-shadow: 5px 20px 20px 20px #3e2723;
-    -webkit-transition: all 0.4s ease-out;
-    -moz-transition: all 0.4s ease-out;
-    -o-transition: all 0.4s ease-out;
-    -ms-transition: all 0.4s ease-out;
-    transition: all 0.4s ease-out;
-}
 
-.topImage:hover {
-    height: 325px;
-    width: 1305px;
-    box-shadow: 5px 20px 20px 20px #5d4037;
-    -webkit-transition: all 0.4s ease-in;
-    -moz-transition: all 0.4s ease-in;
-    -o-transition: all 0.4s ease-in;
-    -ms-transition: all 0.4s ease-in;
-    transition: all 0.4s ease-in;
-}
 
 #bottomLayout {
     height: 380px;
@@ -37,7 +14,7 @@ body {
     margin-bottom: 10px;
     border-style: dashed;
     border-radius: 10px;
-    border-color: #b61827;
+    border-color: #b7dbf1;
 }
 
 #bottom-left {
@@ -50,14 +27,14 @@ body {
 #bottom-right {
     float: right;
     margin-right: 240px;
-    margin-top: 40px;
+    margin-top: 50px;
     text-decoration: none;
 }
 
 form {
-    border-style: dashed;
+    border-style: groove;
     border-radius: 10px;
-    border-color: #b61827;
+    border-color: #060c50;;
     padding: 25px;
 }
 
@@ -68,19 +45,19 @@ form {
 input[type=submit] {
     width: 10em;
     height: 2.5em;
-    background-color: #c0392b;
-    color: #ffffff;
+    background-color: #63a1e2;
+        color: #f5f5f5;
     border-radius: 10px;
     font-size: 14px;
     font-family: 'Times New Roman', Times, serif;
 }
 
 input[type=submit]:hover {
-    background-color: #b61827;
+    background-color: #e5d3d5;
 }
 
 #input {
-    border-color: #c0392b;
+    border-color:#2b49c0;
     border-radius: 5px;
     width: 180px;
     height: 20px;
@@ -89,7 +66,7 @@ input[type=submit]:hover {
 #rowHeading {
     font-size: 1.2em;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #c0392b;
+    color: #2b78c0;
     font-weight: bold;
 }
 
