--- a/CSS/adminRegisterStyle.css
+++ b/CSS/adminRegisterStyle.css
@@ -3,30 +3,6 @@ body {
     width: 100%;
 }
 
-.topImage {
-    height: 320px;
-    width: 1300px;
-    margin-top: 30px;
-    border-radius: 20px;
-    opacity: 0.9;
-    box-shadow: 5px 20px 20px 20px #3e2723;
-    -webkit-transition: all 0.4s ease-out;
-    -moz-transition: all 0.4s ease-out;
-    -o-transition: all 0.4s ease-out;
-    -ms-transition: all 0.4s ease-out;
-    transition: all 0.4s ease-out;
-}
-
-.topImage:hover {
-    height: 325px;
-    width: 1305px;
-    box-shadow: 5px 20px 20px 20px #5d4037;
-    -webkit-transition: all 0.4s ease-in;
-    -moz-transition: all 0.4s ease-in;
-    -o-transition: all 0.4s ease-in;
-    -ms-transition: all 0.4s ease-in;
-    transition: all 0.4s ease-in;
-}
 
 #bottomLayout {
     height: 380px;
@@ -35,15 +11,15 @@ body {
     opacity: 0.9;
     background-color: #ffffff;
     margin-bottom: 10px;
-    border-style: dashed;
+    border-style: solid;
     border-radius: 10px;
-    border-color: #b61827;
+    border-color: #b7dbf1;
 }
 
 #bottom-left {
     float: left;
     margin-left: 240px;
-    margin-top: 60px;
+    margin-top: 40px;
     text-decoration: none;
 }
 
@@ -57,8 +33,8 @@ body {
 form {
     border-style: dashed;
     border-radius: 10px;
-    border-color: #b61827;
-    padding: 25px;
+    border-color: #060c50;
+
 }
 
 #formLayout {
@@ -68,19 +44,19 @@ form {
 input[type=submit] {
     width: 10em;
     height: 2.5em;
-    background-color: #c0392b;
-    color: #ffffff;
+    background-color: #63a1e2;
+    color: #f5f5f5;
     border-radius: 10px;
     font-size: 14px;
     font-family: 'Times New Roman', Times, serif;
 }
 
 input[type=submit]:hover {
-    background-color: #b61827;
+    background-color: #e5d3d5;
 }
 
 #input {
-    border-color: #c0392b;
+    border-color: #2b49c0;
     border-radius: 5px;
     width: 180px;
     height: 20px;
@@ -89,7 +65,7 @@ input[type=submit]:hover {
 #rowHeading {
     font-size: 1.2em;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #c0392b;
+    color: #2b78c0;
     font-weight: bold;
 }
 
