--- a/CSS/mainStyle.css
+++ b/CSS/mainStyle.css
@@ -34,10 +34,15 @@ body {
     border-radius: 10px;
     opacity: 0.9;
     background-color: #ffffff;
-    border-style: groove;
+    border-style: solid;
     border-radius: 10px;
-    border-color: #d9d4d5;
+    border-color: whitesmoke;
+    box-shadow: 5px 20px 20px 20px #3e2723;
+}
 
+#bottomLayout:hover {
+
+    box-shadow: 5px 20px 20px 20px #5d4037;
 }
 
 #bottom-left {
@@ -45,6 +50,44 @@ body {
     margin-left: 280px;
 
     text-decoration: none;
+}
+
+#imageL {
+    -webkit-transition: all 0.4s ease-out;
+    -moz-transition: all 0.4s ease-out;
+    -o-transition: all 0.4s ease-out;
+    -ms-transition: all 0.4s ease-out;
+    transition: all 0.4s ease-out;
+}
+
+#imageL:hover {
+    height: 205px;
+    width: 185px;
+    transition: 0.3s;
+    -webkit-transition: all 0.4s ease-in;
+    -moz-transition: all 0.4s ease-in;
+    -o-transition: all 0.4s ease-in;
+    -ms-transition: all 0.4s ease-in;
+    transition: all 0.4s ease-in;
+}
+
+#imageR {
+    -webkit-transition: all 0.4s ease-out;
+    -moz-transition: all 0.4s ease-out;
+    -o-transition: all 0.4s ease-out;
+    -ms-transition: all 0.4s ease-out;
+    transition: all 0.4s ease-out;
+}
+
+#imageR:hover {
+    height: 205px;
+    width: 225px;
+    transition: 0.3s;
+    -webkit-transition: all 0.4s ease-in;
+    -moz-transition: all 0.4s ease-in;
+    -o-transition: all 0.4s ease-in;
+    -ms-transition: all 0.4s ease-in;
+    transition: all 0.4s ease-in;
 }
 
 #bottom-right {
@@ -68,42 +111,4 @@ body {
     color: #002171;
     font-weight: bold;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-#imageL {
-    -webkit-transition: all 0.4s ease-out;
-    -moz-transition: all 0.4s ease-out;
-    -o-transition: all 0.4s ease-out;
-    -ms-transition: all 0.4s ease-out;
-    transition: all 0.4s ease-out;
-}
-
-#imageL:hover {
-    height: 205px;
-    width: 205px;
-    transition: 0.3s;
-    -webkit-transition: all 0.4s ease-in;
-    -moz-transition: all 0.4s ease-in;
-    -o-transition: all 0.4s ease-in;
-    -ms-transition: all 0.4s ease-in;
-    transition: all 0.4s ease-in;
-}
-
-#imageR {
-    -webkit-transition: all 0.4s ease-out;
-    -moz-transition: all 0.4s ease-out;
-    -o-transition: all 0.4s ease-out;
-    -ms-transition: all 0.4s ease-out;
-    transition: all 0.4s ease-out;
-}
-
-#imageR:hover {
-    height: 205px;
-    width: 205px;
-    transition: 0.3s;
-    -webkit-transition: all 0.4s ease-in;
-    -moz-transition: all 0.4s ease-in;
-    -o-transition: all 0.4s ease-in;
-    -ms-transition: all 0.4s ease-in;
-    transition: all 0.4s ease-in;
 }
